--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "cd ../../part2/phonebook && npm run build && xcopy /s /i /e /y dist ..\\..\\part3\\phonebook\\dist",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +19,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.4",
     "nodemon": "^3.1.9"
   }
 }
