--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -10,7 +10,8 @@
     "build:ui": "cd ../../part2/phonebook && npm run build && xcopy /s /i /e /y dist ..\\..\\part3\\phonebook\\dist",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,11 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@flydotio/dockerfile": "^0.7.4",
+    "@stylistic/eslint-plugin-js": "^3.0.1",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.9"
   }
 }
