--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,22 +6,27 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test node --test",
-    "lint": "eslint ."
+    "test": "cross-env NODE_ENV=test node --test --test-concurrency=1",
+    "lint": "eslint .",
+    "deploy": "fly deploy",
+    "logs:prod": "fly logs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@flydotio/dockerfile": "^0.7.4",
     "@stylistic/eslint-plugin-js": "^3.1.0",
     "eslint": "^9.20.0",
     "globals": "^15.14.0",
