--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -9,7 +9,8 @@
     "test": "cross-env NODE_ENV=test node --test --test-concurrency=1",
     "lint": "eslint .",
     "deploy": "fly deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "",
   "license": "ISC",
